fixed projects side images spacing problem

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,7 +444,7 @@ main .projects .project div.project_images .side_images {
 	width: 100%;
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: center;
 	align-items: center;
 }
 
